--- a/index.html
+++ b/index.html
@@ -141,55 +141,51 @@
                 <h3 class="name">Mark Guerrero</h3>
                 <p class="proffesion">Product Designer</p>
               </div>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                aria-hidden="true"
-                style="
-                  position: absolute;
-                  width: 0;
-                  height: 0;
-                  overflow: hidden;
-                "
-              >
-                <defs>
-                  <symbol id="icon-facebook" viewBox="0 0 40 40">
-                    <path
-                      d="M21.329 5.313h2.921V.225C23.746.156 22.013 0 19.994 0c-4.212 0-7.097 2.649-7.097 7.519V12H8.249v5.688h4.648V32h5.699V17.689h4.46l.708-5.688h-5.169V8.082c.001-1.644.444-2.769 2.735-2.769z"
-                    />
-                  </symbol>
-                  <symbol id="icon-instagram" viewBox="0 0 40 40">
-                    <path
-                      d="M31.969 9.408c-.075-1.7-.35-2.869-.744-3.882a7.803 7.803 0 0 0-1.85-2.838A7.867 7.867 0 0 0 26.543.844C25.524.45 24.361.175 22.661.1 20.948.019 20.404 0 16.06 0s-4.888.019-6.595.094c-1.7.075-2.869.35-3.882.744a7.803 7.803 0 0 0-2.838 1.85A7.867 7.867 0 0 0 .901 5.52C.507 6.539.232 7.702.157 9.402c-.081 1.713-.1 2.257-.1 6.601s.019 4.888.094 6.595c.075 1.7.35 2.869.744 3.882a7.895 7.895 0 0 0 1.85 2.838 7.867 7.867 0 0 0 2.832 1.844c1.019.394 2.182.669 3.882.744 1.706.075 2.25.094 6.595.094s4.888-.019 6.595-.094c1.7-.075 2.869-.35 3.882-.744a8.181 8.181 0 0 0 4.682-4.682c.394-1.019.669-2.182.744-3.882.075-1.707.094-2.25.094-6.595s-.006-4.888-.081-6.595zm-2.882 13.065c-.069 1.563-.331 2.407-.55 2.969a5.31 5.31 0 0 1-3.038 3.038c-.563.219-1.413.481-2.969.55-1.688.075-2.194.094-6.464.094s-4.782-.019-6.464-.094c-1.563-.069-2.407-.331-2.969-.55a4.926 4.926 0 0 1-1.838-1.194 4.974 4.974 0 0 1-1.194-1.838c-.219-.563-.481-1.413-.55-2.969-.075-1.688-.094-2.194-.094-6.464s.019-4.782.094-6.464c.069-1.563.331-2.407.55-2.969a4.868 4.868 0 0 1 1.2-1.838A4.974 4.974 0 0 1 6.639 3.55c.563-.219 1.413-.481 2.969-.55 1.688-.075 2.194-.094 6.464-.094 4.276 0 4.782.019 6.464.094 1.563.069 2.407.331 2.969.55a4.914 4.914 0 0 1 1.838 1.194 4.974 4.974 0 0 1 1.194 1.838c.219.563.481 1.413.55 2.969.075 1.688.094 2.194.094 6.464s-.019 4.77-.094 6.458z"
-                    />
-                    <path
-                      d="M16.059 7.783c-4.538 0-8.22 3.682-8.22 8.22s3.682 8.22 8.22 8.22 8.22-3.682 8.22-8.22-3.682-8.22-8.22-8.22zm0 13.552a5.333 5.333 0 0 1 0-10.664 5.333 5.333 0 0 1 0 10.664zM26.524 7.458a1.919 1.919 0 1 1-3.838 0 1.919 1.919 0 0 1 3.838 0z"
-                    />
-                  </symbol>
-                  <symbol id="icon-linkedin" viewBox="0 0 40 40">
-                    <path
-                      d="M31.992 32v-.001H32V20.263c0-5.741-1.236-10.164-7.948-10.164-3.227 0-5.392 1.771-6.276 3.449h-.093v-2.913h-6.364v21.364h6.627V21.42c0-2.785.528-5.479 3.977-5.479 3.399 0 3.449 3.179 3.449 5.657v10.401h6.62zM.528 10.636h6.635V32H.528V10.636zM3.843 0C1.722 0 0 1.721 0 3.843s1.721 3.879 3.843 3.879c2.121 0 3.843-1.757 3.843-3.879A3.846 3.846 0 0 0 3.843 0z"
-                    />
-                  </symbol>
-                  <symbol id="icon-twitter" viewBox="0 0 40 40">
-                    <path
-                      d="M32 6.078c-1.19.522-2.458.868-3.78 1.036a6.523 6.523 0 0 0 2.886-3.626 13.11 13.11 0 0 1-4.16 1.588A6.574 6.574 0 0 0 22.154 3c-3.632 0-6.556 2.948-6.556 6.562 0 .52.044 1.02.152 1.496-5.454-.266-10.28-2.88-13.522-6.862a6.605 6.605 0 0 0-.898 3.316 6.57 6.57 0 0 0 2.914 5.452 6.479 6.479 0 0 1-2.964-.808v.072c0 3.188 2.274 5.836 5.256 6.446a6.548 6.548 0 0 1-1.72.216 5.8 5.8 0 0 1-1.242-.112c.85 2.598 3.262 4.508 6.13 4.57a13.182 13.182 0 0 1-8.134 2.798c-.538 0-1.054-.024-1.57-.09A18.469 18.469 0 0 0 10.064 29c12.072 0 18.672-10 18.672-18.668 0-.29-.01-.57-.024-.848A13.087 13.087 0 0 0 32 6.078z"
-                    />
-                  </symbol>
-                </defs>
-              </svg>
               <div class="icons">
-                <svg class="social" width="40" height="40">
-                  <use href="#icon-instagram"></use>
-                </svg>
-                <svg class="social" width="40" height="40">
-                  <use href="#icon-twitter"></use>
-                </svg>
-                <svg class="social" width="40" height="40">
-                  <use href="#icon-facebook"></use>
-                </svg>
-                <svg class="social" width="40" height="40">
-                  <use href="#icon-linkedin"></use>
-                </svg>
+                <ul class="icons-list">
+                  <li class="icons-punkt">
+                    <a
+                      href="https://www.instagram.com/"
+                      class="icons-item"
+                      target="_blank"
+                    >
+                      <svg class="social" width="16" height="16">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icons-punkt">
+                    <a
+                      href="https://twitter.com/"
+                      class="icons-item"
+                      target="_blank"
+                    >
+                      <svg class="social" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icons-punkt">
+                    <a
+                      href="https://www.facebook.com/"
+                      class="icons-item"
+                      target="_blank"
+                      ><svg class="social" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icons-punkt">
+                    <a
+                      href="https://www.linkedin.com/"
+                      class="icons-item"
+                      target="_blank"
+                      ><svg class="social" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -275,66 +271,114 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img
-                src="./images/img5.jpg"
-                alt="Banking App Photo"
-                width="360"
-              />
+              <div class="portfolio-img">
+                <img
+                  src="./images/img5.jpg"
+                  alt="Banking App Photo"
+                  width="360"
+                />
+                <p class="par">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="portfolio-container">
                 <h3 class="portfolio-text">Banking App</h3>
                 <p class="portfolio-p">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/img6.jpg"
-                alt="Cashless Payment Photo"
-                width="360"
-              />
+              <div class="portfolio-img">
+                <img
+                  src="./images/img6.jpg"
+                  alt="Cashless Payment Photo"
+                  width="360"
+                />
+                <p class="par">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="portfolio-container">
                 <h3 class="portfolio-text">Cashless Payment</h3>
                 <p class="portfolio-p">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/img7.jpg"
-                alt="Meditation App Photo"
-                width="360"
-              />
+              <div class="portfolio-img">
+                <img
+                  src="./images/img7.jpg"
+                  alt="Meditation App Photo"
+                  width="360"
+                />
+                <p class="par">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="portfolio-container">
                 <h3 class="portfolio-text">Meditation App</h3>
                 <p class="portfolio-p">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/img8.jpg"
-                alt="Taxi Service Photo"
-                width="360"
-              />
+              <div class="portfolio-img">
+                <img
+                  src="./images/img8.jpg"
+                  alt="Taxi Service Photo"
+                  width="360"
+                />
+                <p class="par">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="portfolio-container">
                 <h3 class="portfolio-text">Taxi Service</h3>
                 <p class="portfolio-p">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/img9.jpg"
-                alt="Screen Illustrations Photo"
-                width="360"
-              />
+              <div class="portfolio-img">
+                <img
+                  src="./images/img9.jpg"
+                  alt="Screen Illustrations Photo"
+                  width="360"
+                />
+                <p class="par">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="portfolio-container">
                 <h3 class="portfolio-text">Screen Illustrations</h3>
                 <p class="portfolio-p">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/img10.jpg"
-                alt="Online Courses Photo"
-                width="360"
-              />
+              <div class="portfolio-img">
+                <img
+                  src="./images/img10.jpg"
+                  alt="Online Courses Photo"
+                  width="360"
+                />
+                <p class="par">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="portfolio-container">
                 <h3 class="portfolio-text">Online Courses</h3>
                 <p class="portfolio-p">Marketing</p>
@@ -347,26 +391,61 @@
     <!-- Footer Info -->
     <footer class="footer">
       <div class="container">
-        <a class="logo-web-f" href="./index.html"
-          >Web<span class="logo-studio-f">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="footer-info">
+          <a class="logo-web-f" href="./index.html"
+            >Web<span class="logo-studio-f">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
         <div class="icons">
-          <svg class="social" width="40" height="40">
-            <use href="#icon-instagram"></use>
-          </svg>
-          <svg class="social" width="40" height="40">
-            <use href="#icon-twitter"></use>
-          </svg>
-          <svg class="social" width="40" height="40">
-            <use href="#icon-facebook"></use>
-          </svg>
-          <svg class="social" width="40" height="40">
-            <use href="#icon-linkedin"></use>
-          </svg>
+          <p class="social-par">Social media</p>
+          <ul class="footer-icons-list">
+            <li class="footer-icons-punkt">
+              <a
+                href="https://www.instagram.com/"
+                class="footer-icons-item"
+                target="_blank"
+              >
+                <svg class="footer-social" width="24" height="24">
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icons-punkt">
+              <a
+                href="https://twitter.com/"
+                class="footer-icons-item"
+                target="_blank"
+              >
+                <svg class="footer-social" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icons-punkt">
+              <a
+                href="https://www.facebook.com/"
+                class="footer-icons-item"
+                target="_blank"
+                ><svg class="footer-social" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icons-punkt">
+              <a
+                href="https://www.linkedin.com/"
+                class="footer-icons-item"
+                target="_blank"
+                ><svg class="footer-social" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
