--- a/index.html
+++ b/index.html
@@ -48,9 +48,57 @@
               <a href="" class="menu-link">Contacts</a>
             </li>
           </ul>
+        </nav>
+        <address class="address">
+          <ul class="contacts-list">
+            <li class="menu-item-address">
+              <a class="contacts-info" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="menu-item-address">
+              <a class="contacts-info" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+
+        <button class="burger menu-toggle js-open-menu" type="button">
+          <svg class="burger-icon" width="24" height="24">
+            <use href="./images/symbol.svg#icon-burger-menu"></use>
+          </svg>
+        </button>
+
+        <!-- --------------Mobile Menu------------------------------ -->
+
+        <div class="menu-container js-menu-container" id="mobile-menu">
+          <div>
+            <button
+              type="button"
+              class="modal-button-menu menu-toggle js-close-menu"
+            >
+              <svg class="modal-button-close" width="8" height="8">
+                <use href="./images/symbol.svg#icon-close"></use>
+              </svg>
+            </button>
+            <nav>
+              <ul class="menu-mobile-list">
+                <li class="menu-item">
+                  <a href="./index.html" class="menu-link current">Studio</a>
+                </li>
+                <li class="menu-item">
+                  <a href="" class="menu-link">Portfolio</a>
+                </li>
+                <li class="menu-item">
+                  <a href="" class="menu-link">Contacts</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
 
           <address class="address">
-            <ul class="contacts-list">
+            <ul class="contacts-list-mobile">
               <li class="menu-item-address">
                 <a class="contacts-info" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
@@ -63,94 +111,47 @@
               </li>
             </ul>
           </address>
-
-          <button class="burger menu-toggle js-open-menu" type="button">
-            <svg class="burger-icon" width="24" height="24">
-              <use href="./images/symbol.svg#icon-burger-menu"></use>
-            </svg>
-          </button>
-          <div class="menu-container js-menu-container" id="mobile-menu">
-            <button
-              type="button"
-              class="modal-button-menu menu-toggle js-close-menu"
-            >
-              <svg class="modal-button-close" width="8" height="8">
-                <use href="./images/symbol.svg#icon-close"></use>
-              </svg>
-            </button>
-
-            <ul class="menu-mobile-list">
-              <li class="menu-item">
-                <a href="./index.html" class="menu-link current">Studio</a>
-              </li>
-              <li class="menu-item">
-                <a href="" class="menu-link">Portfolio</a>
-              </li>
-              <li class="menu-item">
-                <a href="" class="menu-link">Contacts</a>
-              </li>
-            </ul>
-
-            <address class="adress">
-              <ul class="contacts-list-mobile">
-                <li class="menu-item-address">
-                  <a class="contacts-info" href="mailto:info@devstudio.com"
-                    >info@devstudio.com</a
-                  >
-                </li>
-                <li class="menu-item-address">
-                  <a class="contacts-info" href="tel:+110001111111"
-                    >+11 (000) 111-11-11</a
-                  >
-                </li>
-              </ul>
-            </address>
-            <ul class="icons-list-menu">
-              <li class="icons-punkt">
-                <a
-                  href="https://www.instagram.com/"
-                  class="icons-item"
-                  target="_blank"
-                >
-                  <svg class="social" width="16" height="16">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="icons-punkt">
-                <a
-                  href="https://twitter.com/"
-                  class="icons-item"
-                  target="_blank"
-                >
-                  <svg class="social" width="16" height="16">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="icons-punkt">
-                <a
-                  href="https://www.facebook.com/"
-                  class="icons-item"
-                  target="_blank"
-                  ><svg class="social" width="16" height="16">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="icons-punkt">
-                <a
-                  href="https://www.linkedin.com/"
-                  class="icons-item"
-                  target="_blank"
-                  ><svg class="social" width="16" height="16">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </nav>
+          <ul class="icons-list-menu">
+            <li class="icons-punkt">
+              <a
+                href="https://www.instagram.com/"
+                class="icons-item"
+                target="_blank"
+              >
+                <svg class="social" width="16" height="16">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icons-punkt">
+              <a href="https://twitter.com/" class="icons-item" target="_blank">
+                <svg class="social" width="16" height="16">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icons-punkt">
+              <a
+                href="https://www.facebook.com/"
+                class="icons-item"
+                target="_blank"
+                ><svg class="social" width="16" height="16">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icons-punkt">
+              <a
+                href="https://www.linkedin.com/"
+                class="icons-item"
+                target="_blank"
+                ><svg class="social" width="16" height="16">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
     <main>
@@ -229,7 +230,12 @@
           <h2 class="team-photo-title">Our Team</h2>
           <ul class="team-list">
             <li class="team-photo-list">
-              <img src="./images/img1.jpg" alt="Designer" width="264" />
+              <img
+                srcset="./images/img1.jpg 1x, ./images/img1-2x.jpg 2x"
+                src="./images/img1.jpg"
+                alt="Designer"
+                width="264"
+              />
               <div class="name-container">
                 <h3 class="name">Mark Guerrero</h3>
                 <p class="proffesion">Product Designer</p>
@@ -281,6 +287,7 @@
             </li>
             <li class="team-photo-list">
               <img
+                srcset="./images/img2.jpg 1x, ./images/img2-2x.jpg 2x"
                 src="./images/img2.jpg"
                 alt="Frontend
               Developer Photo"
@@ -336,7 +343,12 @@
               </div>
             </li>
             <li class="team-photo-list">
-              <img src="./images/img3.jpg" alt="Marketing Photo" width="264" />
+              <img
+                srcset="./images/img3.jpg 1x, ./images/img3-2x.jpg 2x"
+                src="./images/img3.jpg"
+                alt="Marketing Photo"
+                width="264"
+              />
               <div class="name-container">
                 <h3 class="name">Camila Garcia</h3>
                 <p class="proffesion">Marketing</p>
@@ -388,6 +400,7 @@
             </li>
             <li class="team-photo-list">
               <img
+                srcset="./images/img4.jpg 1x, ./images/img4-2x.jpg 2x"
                 src="./images/img4.jpg"
                 alt="UI
               Designer Photo"
@@ -452,11 +465,32 @@
           <ul class="portfolio-list">
             <li class="portfolio-item">
               <div class="portfolio-img">
-                <img
-                  src="./images/img5.jpg"
-                  alt="Banking App Photo"
-                  width="360"
-                />
+                <picture>
+                  <source
+                    srcset="./images/img5.jpg 1x, ./images/img5-2x.jpg 2x"
+                    media="(min-width:1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/img5-tab.jpg    1x,
+                      ./images/img5-tab-2x.jpg 2x
+                    "
+                    media="(min-width:768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/img5-mob.jpg    1x,
+                      ./images/img5-mob-2x.jpg 2x
+                    "
+                    media="(max-width:767px)"
+                  />
+
+                  <img
+                    src="./images/img5.jpg"
+                    alt="Banking App Photo"
+                    width="360"
+                  />
+                </picture>
                 <p class="par">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -471,11 +505,31 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-img">
-                <img
-                  src="./images/img6.jpg"
-                  alt="Cashless Payment Photo"
-                  width="360"
-                />
+                <picture>
+                  <source
+                    srcset="./images/img6.jpg 1x, ./images/img6-2x.jpg 2x"
+                    media="(min-width:1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/img6-tab.jpg    1x,
+                      ./images/img6-tab-2x.jpg 2x
+                    "
+                    media="(min-width:768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/img6-mob.jpg    1x,
+                      ./images/img6-mob-2x.jpg 2x
+                    "
+                    media="(max-width:767px)"
+                  />
+                  <img
+                    src="./images/img6.jpg"
+                    alt="Cashless Payment Photo"
+                    width="360"
+                  />
+                </picture>
                 <p class="par">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -490,11 +544,31 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-img">
-                <img
-                  src="./images/img7.jpg"
-                  alt="Meditation App Photo"
-                  width="360"
-                />
+                <picture>
+                  <source
+                    srcset="./images/img7.jpg 1x, ./images/img7-2x.jpg 2x"
+                    media="(min-width:1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/img7-tab.jpg    1x,
+                      ./images/img7-tab-2x.jpg 2x
+                    "
+                    media="(min-width:768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/img7-mob.jpg    1x,
+                      ./images/img7-mob-2x.jpg 2x
+                    "
+                    media="(max-width:767px)"
+                  />
+                  <img
+                    src="./images/img7.jpg"
+                    alt="Meditation App Photo"
+                    width="360"
+                  />
+                </picture>
                 <p class="par">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -509,11 +583,31 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-img">
-                <img
-                  src="./images/img8.jpg"
-                  alt="Taxi Service Photo"
-                  width="360"
-                />
+                <picture>
+                  <source
+                    srcset="./images/img8.jpg 1x, ./images/img8-2x.jpg 2x"
+                    media="(min-width:1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/img8-tab.jpg    1x,
+                      ./images/img8-tab-2x.jpg 2x
+                    "
+                    media="(min-width:768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/img8-mob.jpg    1x,
+                      ./images/img8-mob-2x.jpg 2x
+                    "
+                    media="(max-width:767px)"
+                  />
+                  <img
+                    src="./images/img8.jpg"
+                    alt="Taxi Service Photo"
+                    width="360"
+                  />
+                </picture>
                 <p class="par">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -528,11 +622,31 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-img">
-                <img
-                  src="./images/img9.jpg"
-                  alt="Screen Illustrations Photo"
-                  width="360"
-                />
+                <picture>
+                  <source
+                    srcset="./images/img9.jpg 1x, ./images/img9-2x.jpg 2x"
+                    media="(min-width:1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/img9-tab.jpg    1x,
+                      ./images/img9-tab-2x.jpg 2x
+                    "
+                    media="(min-width:768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/img9-mob.jpg    1x,
+                      ./images/img9-mob-2x.jpg 2x
+                    "
+                    media="(max-width:767px)"
+                  />
+                  <img
+                    src="./images/img9.jpg"
+                    alt="Screen Illustrations Photo"
+                    width="360"
+                  />
+                </picture>
                 <p class="par">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -547,11 +661,31 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-img">
-                <img
-                  src="./images/img10.jpg"
-                  alt="Online Courses Photo"
-                  width="360"
-                />
+                <picture>
+                  <source
+                    srcset="./images/img10.jpg 1x, ./images/img10-2x.jpg 2x"
+                    media="(min-width:1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/img10-tab.jpg    1x,
+                      ./images/img10-tab-2x.jpg 2x
+                    "
+                    media="(min-width:768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/img10-mob.jpg    1x,
+                      ./images/img10-mob-2x.jpg 2x
+                    "
+                    media="(max-width:767px)"
+                  />
+                  <img
+                    src="./images/img10.jpg"
+                    alt="Online Courses Photo"
+                    width="360"
+                  />
+                </picture>
                 <p class="par">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
